Add an array of IMDB ids and functions to search

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./api.js" ></script>
+    <script src="./scripts/IDs.js" ></script>
+    <script src="./scripts/api.js" ></script>
+    <script src="./scripts/search.js" defer></script>
 </head>
 <body>
     <h1>Movie API!!!</h1>
