Add some styling and fix the search

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>Let's pick a movie for you !</h1>
   
       <section class="search__container">
-        <form class="search__form">
+        <form class="search__form" id ='search'>
           <div class="search__field">
             <div class="search__input">
               <label for="keywords">Keywords</label>
@@ -57,16 +57,16 @@
   
               <div class="search__buttons"></div>
               <button type="submit" class="search__button">Search</button>
-              <button type="button" class="search__random">
+              <!-- <button type="button" class="search__random">
                 Find a random movie!
-              </button>
+              </button> -->
             </div>
           </div>
         </form>
       </section>
   
       <section class="movies">  
-        <div class="popular__movies"></div>
+        <div id= "results"></div>
       </section>
 </body>
 </html>
